// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EntityKit should calculate entity 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "primaryKey",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdDate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "DeleteDateColumn",
      "enum": null,
      "fallback": null,
      "key": "deletedDate",
      "max": null,
      "min": null,
      "nullable": true,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "ExpiryDateColumn",
      "enum": null,
      "fallback": null,
      "key": "expiryDate",
      "max": null,
      "min": null,
      "nullable": true,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "sequence",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "UpdateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "updatedDate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "VersionColumn",
      "enum": null,
      "fallback": 0,
      "key": "version",
      "max": null,
      "min": 0,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "array",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "array",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "bigint",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "bigint",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "boolean",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "boolean",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "date",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "number",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "object",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "object",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "string",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "uuid",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "OnCreate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": null,
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestEntityUtility",
    "namespace": null,
  },
  "extras": [],
  "generated": [
    {
      "key": "sequence",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "increment",
    },
  ],
  "hooks": [
    {
      "callback": [Function],
      "decorator": "OnValidate",
    },
    {
      "callback": [Function],
      "decorator": "OnUpdate",
    },
    {
      "callback": [Function],
      "decorator": "OnInsert",
    },
    {
      "callback": [Function],
      "decorator": "OnDestroy",
    },
    {
      "callback": [Function],
      "decorator": "OnCreate",
    },
  ],
  "indexes": [
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "deletedDate",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "deletedDate",
        },
        {
          "direction": "asc",
          "key": "expiryDate",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "deletedDate",
        },
        {
          "direction": "asc",
          "key": "version",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "deletedDate",
        },
        {
          "direction": "asc",
          "key": "expiryDate",
        },
        {
          "direction": "asc",
          "key": "version",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "version",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
  ],
  "primaryKeys": [
    "primaryKey",
  ],
  "primarySource": "RedisSource",
  "relations": [],
  "schemas": [],
  "target": [Function],
}
`;

exports[`EntityKit should calculate versioned entity 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "primaryKey",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdDate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "UpdateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "updatedDate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "VersionColumn",
      "enum": null,
      "fallback": 0,
      "key": "version",
      "max": null,
      "min": 0,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "VersionEndDateColumn",
      "enum": null,
      "fallback": null,
      "key": "versionEndDate",
      "max": null,
      "min": null,
      "nullable": true,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "VersionKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "versionKey",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "VersionStartDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "versionStartDate",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestEntityUtilityVersioned",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "version",
        },
      ],
      "name": null,
      "options": {},
      "unique": true,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "versionStartDate",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
    {
      "keys": [
        {
          "direction": "asc",
          "key": "primaryKey",
        },
        {
          "direction": "asc",
          "key": "versionStartDate",
        },
        {
          "direction": "asc",
          "key": "versionEndDate",
        },
      ],
      "name": null,
      "options": {},
      "unique": false,
    },
  ],
  "primaryKeys": [
    "primaryKey",
    "versionKey",
  ],
  "primarySource": "MongoSource",
  "relations": [],
  "schemas": [],
  "target": [Function],
}
`;

exports[`EntityKit should remove readonly 1`] = `
{
  "OnCreate": "OnCreate",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 0,
}
`;

exports[`EntityKit should resolve clone 1`] = `Promise {}`;

exports[`EntityKit should resolve create 1`] = `
TestEntityUtility {
  "OnCreate": "OnCreate",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "string": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 0,
}
`;

exports[`EntityKit should resolve destroy hooks 1`] = `
TestEntityUtility {
  "OnCreate": "OnCreate",
  "OnDestroy": "OnDestroy",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "string": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 0,
}
`;

exports[`EntityKit should resolve insert 1`] = `Promise {}`;

exports[`EntityKit should resolve insert hooks 1`] = `
TestEntityUtility {
  "OnCreate": "OnCreate",
  "OnInsert": "OnInsert",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "string": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 0,
}
`;

exports[`EntityKit should resolve update 1`] = `
TestEntityUtility {
  "OnCreate": "OnCreate",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "string": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 1,
}
`;

exports[`EntityKit should resolve update hooks 1`] = `
TestEntityUtility {
  "OnCreate": "OnCreate",
  "OnUpdate": "OnUpdate",
  "array": null,
  "bigint": null,
  "boolean": null,
  "createdDate": 2024-01-01T08:00:00.000Z,
  "date": null,
  "deletedDate": null,
  "expiryDate": null,
  "number": null,
  "object": null,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "sequence": null,
  "string": null,
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "uuid": null,
  "version": 0,
}
`;

exports[`EntityKit should resolve versionCopy 1`] = `
TestEntityUtilityVersioned {
  "createdDate": 2024-01-01T08:00:00.000Z,
  "primaryKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "updatedDate": 2024-01-01T08:00:00.000Z,
  "version": 1,
  "versionEndDate": null,
  "versionKey": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "versionStartDate": null,
}
`;

exports[`EntityKit should resolve versionUpdate 1`] = `
{
  "versionEndDate": 2024-01-01T08:00:00.000Z,
}
`;
